# mediated-reasoning

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements-hf.txt  requirements-langfuse.txt  requirements.txt
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: sync-hf-space.yml
docs/: PROJECT_CONTEXT.md  analysis-wardrobe-app.md  index.html  vibe-code-a-Revolut-replacement.html  webmc-browser-standard-adoption.html  webmcp-investment-analysis_report.html
src/: main.py  mediator.py  observability.py  project_memory.py
src/agents/: __init__.py  base_agent.py  cost_agent.py  legal_agent.py  market_agent.py  risk_agent.py  scalability_agent.py  tech_agent.py
src/audit/: __main__.py  consistency_checker.py  grounding_verifier.py  output_validator.py  prompt_linter.py  quality_gate.py  runner.py  url_checker.py
src/llm/: client.py  prompts.py
src/metrics/: __main__.py
src/models/: __init__.py  schemas.py  types.py
src/modules/: __init__.py  base_module.py  cost_module.py  legal_module.py  market_module.py  risk_module.py  scalability_module.py  tech_module.py
src/search/: __init__.py  searcher.py
src/utils/: __init__.py  document_loader.py  exporters.py  formatters.py  html_formatter.py  logger.py
tests/: conftest.py  test_agent_selection.py  test_agents.py  test_audit.py  test_cli.py  test_exporters.py  test_formatters.py  test_mediator.py  test_metrics.py  test_module_selection.py  test_modules.py  test_project_memory.py  test_ptc.py  test_quality_gate.py  test_schemas.py
