[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediated-reasoning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "anthropic>=0.72.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=0.1.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
